--- a/TemplateFiles/panels/skinVideo/style.css
+++ b/TemplateFiles/panels/skinVideo/style.css
@@ -1,10 +1,38 @@
-/* Resets ------ */ 
+/* RESET BLOCK */
 
-html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, hr, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figure, figcaption, hgroup, menu, footer, header, nav, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; } article, aside, canvas, figure, figure img, figcaption, hgroup, footer, header, nav, section, audio, video { display: block; } a img {border: 0;}
-
-body {
+html,
+body,
+div,
+span,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+img,
+label,
+tr,
+th,
+td,
+canvas,
+video {
 	margin: 0;
 	padding: 0;
+	border: 0;
+}
+
+button {
+	background: transparent;
+	outline: none;
+	cursor: pointer;
+}
+
+/* END RESET BLOCK */
+
+body {
 	background-color: #FFF;
 }
 
@@ -12,8 +40,6 @@ button {
 	position: absolute;
 	background-color: rgba(0,0,0,0);
 	border: none;
-	cursor: pointer;
-	outline: none;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	user-select: none;
 }
@@ -47,6 +73,8 @@ video {
 	width: 980px;
 	height: 150px;
 	background-color: transparent;
+	background-image: url("images/expand.png");
+	background-position: center;
 	z-index: 999;
 }
 
@@ -60,10 +88,9 @@ video {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-image: url(../images/static1920x1080.jpg);
+	background-image: url(images/static1920x1080.jpg);
 	background-repeat: no-repeat;
-	background-position: center;
-	background-size: contain;
+	background-position: top center;
 	z-index: 30;
 }
 
@@ -79,7 +106,7 @@ video {
 	display: none;
 	top: 10px;
 	right: 10px;
-	background-image: url(../images/close.png);
+	background-image: url(images/close.png);
 	
 }
 #controlButton{
